--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "ng2-currency-mask": "^13.0.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
