--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.1",
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
+    "ngx-owl-carousel-o": "^7.0.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
