--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "angular-onscreen-material-keyboard": "^0.6.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.1",
     "crypto-js": "^4.1.1",
