--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
+    "ngx-drag-drop": "^14.0.0",
     "ngx-owl-carousel-o": "^7.0.4",
+    "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
