--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
     "ngx-drag-drop": "^14.0.0",
+    "ngx-drag-scroll": "^14.0.1",
     "ngx-owl-carousel-o": "^7.0.4",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
