--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ng2-currency-mask": "^13.0.3",
     "ngx-drag-drop": "^14.0.0",
     "ngx-drag-scroll": "^14.0.1",
+    "ngx-image-compress": "^13.1.13",
+    "ngx-image-cropper": "^6.3.1",
     "ngx-owl-carousel-o": "^7.0.4",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
