--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.10.0",
     "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
     "ngx-drag-drop": "^14.0.0",
     "ngx-drag-scroll": "^14.0.1",
     "ngx-image-compress": "^13.1.13",
     "ngx-image-cropper": "^6.3.1",
+    "ngx-lottie": "^9.1.0",
     "ngx-owl-carousel-o": "^7.0.4",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
