--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "ngx-image-cropper": "^6.3.1",
     "ngx-lottie": "^9.1.0",
     "ngx-owl-carousel-o": "^7.0.4",
+    "ngx-socket-io": "^4.4.0",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
